--- a/public/admin/components-modal.html
+++ b/public/admin/components-modal.html
@@ -15,7 +15,9 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -526,7 +528,8 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Basic Modal</h5>
-              <p>Toggle a working modal demo by clicking the button below. It will slide down and fade in from the top of the page</p>
+              <p>Toggle a working modal demo by clicking the button below. It will slide down and fade in from the top
+                of the page</p>
 
               <!-- Basic Modal -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#basicModal">
@@ -540,7 +543,9 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit.
+                      Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur
+                      nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -556,7 +561,8 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Disabled Backdrop</h5>
-              <p>You can disable the backdrop by adding <code>data-bs-backdrop="false"</code> to <code>.modal-dialog</code></p>
+              <p>You can disable the backdrop by adding <code>data-bs-backdrop="false"</code> to
+                <code>.modal-dialog</code></p>
 
               <!-- Disabled Backdrop Modal -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#disablebackdrop">
@@ -570,7 +576,9 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit.
+                      Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur
+                      nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -586,7 +594,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Scrolling long content</h5>
-              <p>When modals become too long for the user’s viewport or device, they scroll independent of the page itself. You can also create a scrollable modal that allows scroll the modal body by adding <code>.modal-dialog-scrollable</code> to <code>.modal-dialog</code></p>
+              <p>When modals become too long for the user’s viewport or device, they scroll independent of the page
+                itself. You can also create a scrollable modal that allows scroll the modal body by adding
+                <code>.modal-dialog-scrollable</code> to <code>.modal-dialog</code></p>
 
               <!-- Scrolling Modal -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#scrollingModal">
@@ -600,7 +610,9 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body" style="min-height: 1500px;">
-                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit.
+                      Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur
+                      nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -611,7 +623,8 @@
               </div><!-- End Scrolling Modal-->
 
               <!-- Modal Dialog Scrollable -->
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalDialogScrollable">
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                data-bs-target="#modalDialogScrollable">
                 Modal Dialog Scrollable
               </button>
               <div class="modal fade" id="modalDialogScrollable" tabindex="-1">
@@ -622,7 +635,9 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit.
+                      Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur
+                      nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
                       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                       This content should appear at the bottom after you scroll.
                     </div>
@@ -644,7 +659,8 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Vertically Centered</h5>
-              <p>Add <code>.modal-dialog-centered</code> to <code>.modal-dialog</code> to vertically center the modal.</p>
+              <p>Add <code>.modal-dialog-centered</code> to <code>.modal-dialog</code> to vertically center the modal.
+              </p>
 
               <!-- Vertically centered Modal -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#verticalycentered">
@@ -658,7 +674,9 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit.
+                      Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur
+                      nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -674,7 +692,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Modal Sizes</h5>
-              <p>Modals have three optional sizes, available via modifier classes to be placed on a <code>.modal-dialog</code>. These sizes kick in at certain breakpoints to avoid horizontal scrollbars on narrower viewports..</p>
+              <p>Modals have three optional sizes, available via modifier classes to be placed on a
+                <code>.modal-dialog</code>. These sizes kick in at certain breakpoints to avoid horizontal scrollbars on
+                narrower viewports..</p>
 
               <!-- Small Modal -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#smallModal">
@@ -689,7 +709,9 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit.
+                      Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur
+                      nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -712,7 +734,9 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit.
+                      Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur
+                      nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -721,6 +745,8 @@
                   </div>
                 </div>
               </div><!-- End Large Modal-->
+
+              <!-- href="{{ route("admin.shops.create") }}" -->
 
               <!-- Extra Large Modal -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ExtralargeModal">
@@ -735,7 +761,9 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit.
+                      Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur
+                      nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -758,7 +786,9 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit.
+                      Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur
+                      nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -774,7 +804,8 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Disabled Animation</h5>
-              <p>For modals that simply appear rather than fade in to view, remove the <code>.fade</code> class from your <code>.modal</code> element </p>
+              <p>For modals that simply appear rather than fade in to view, remove the <code>.fade</code> class from
+                your <code>.modal</code> element </p>
 
               <!-- Disabled Animation Modal -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#disabledAnimation">
@@ -788,7 +819,9 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                      Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit.
+                      Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur
+                      nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -821,7 +854,8 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
